--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,26 +1,13 @@
 {
-    "extends": "stylelint-config-standard-scss",
-    "plugins": ["prettier"],
-    "ignoreFiles": [
-        ".git/**", "dist/**", "**/node_modules/**"
-    ],
-    "rules": {
-        "selector-class-pattern": null,
-        "custom-property-pattern": "^.*$",
-        "at-rule-no-unknown": null,
-        "no-empty-source": null,
-        "block-no-empty": null,
-        "no-descending-specificity": null,
-        "selector-pseudo-class-no-unknown": [
-            true,
-            {
-                "ignorePseudoClasses": ["deep"]
-            }
-        ],
-        "scss/at-rule-no-unknown": true,
-        "scss/dollar-variable-empty-line-before": null,
-        "scss/comment-no-empty": null,
-        "scss/double-slash-comment-empty-line-before": null,
-        "scss/double-slash-comment-whitespace-inside": null
-    }
+  "extends": "stylelint-config-standard-scss",
+  "rules": {
+    "block-no-empty": true,
+    "comment-no-empty": true,
+    "declaration-block-no-duplicate-properties": true,
+    "no-duplicate-selectors": true,
+    "no-duplicate-at-import-rules": true,
+    "at-rule-empty-line-before": "always",
+    "custom-property-empty-line-before": "never",
+    "function-url-quotes": "always"
+  }
 }
