--- a/package.json
+++ b/package.json
@@ -10,24 +10,32 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "gsap": "^3.12.5",
+    "normalize.css": "^8.0.1",
     "nuxt": "^3.11.1",
+    "sass": "^1.72.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-prettier": "^5.0.0",
+    "typescript": "^5.4.3",
+    "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "sass": "^1.72.0",
-    "normalize.css": "^8.0.1"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nuxt/image": "^1.4.0",
+    "@nuxt/ui": "^2.14.2",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/stylelint-module": "^5.2.0",
+    "@pinia/nuxt": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "@pinia/nuxt": "^0.5.1",
     "prettier": "^3.2.5",
-    "stylelint": "^14.2.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0"
+    "stylelint": "^16.2.1"
   }
 }
