--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "@vite-pwa/nuxt": "^0.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
